# hamr-app

./: README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260310000001_init.sql
backend/src/: config.rs  db.rs  did.rs  errors.rs  main.rs  middleware.rs  models.rs  p2p.rs  routes.rs
backend/src/handlers/: dashboard.rs  events.rs  mod.rs  p2p.rs  people.rs  spaces.rs  tasks.rs  things.rs
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Events.tsx  People.tsx  Spaces.tsx  Tasks.tsx  Things.tsx
frontend/src/store/: index.ts
